RESOLVED FIXED75539
getComputedStyle for background is not implemented.
https://bugs.webkit.org/show_bug.cgi?id=75539
Summary getComputedStyle for background is not implemented.
Alexis Menard (darktears)
Reported 2012-01-04 05:24:12 PST
getComputedStyle for background is not implemented.
Attachments
Patch (13.36 KB, patch)
2012-01-04 05:26 PST, Alexis Menard (darktears)
no flags
Patch (23.04 KB, patch)
2012-01-04 11:43 PST, Alexis Menard (darktears)
tony: review+
webkit.review.bot: commit-queue-
Alexis Menard (darktears)
Comment 1 2012-01-04 05:26:03 PST
Tony Chang
Comment 2 2012-01-04 10:19:46 PST
Comment on attachment 121102 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=121102&action=review > LayoutTests/fast/css/getComputedStyle/getComputedStyle-background-shorthand.html:36 > +e.style.backgroundImage = "url(dummy://test.png)"; Where are the tests for setting backgroundRepeat, backgroundAttachment or backgroundPosition? Also, it would be nice to add an identify check like the one mentioned in the border image patch.
Alexis Menard (darktears)
Comment 3 2012-01-04 11:43:06 PST
Tony Chang
Comment 4 2012-01-04 11:47:23 PST
Comment on attachment 121131 [details] Patch Thanks!
WebKit Review Bot
Comment 5 2012-01-05 01:10:12 PST
Comment on attachment 121131 [details] Patch Attachment 121131 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/11131175 New failing tests: http/tests/appcache/simple.html
Alexis Menard (darktears)
Comment 6 2012-01-05 03:31:34 PST
Comment on attachment 121131 [details] Patch Let's give another try. It passed with the previous version of the patch but the second only add more coverage of the new feature.
WebKit Review Bot
Comment 7 2012-01-05 05:40:30 PST
Comment on attachment 121131 [details] Patch Rejecting attachment 121131 [details] from commit-queue. New failing tests: http/tests/appcache/simple.html Full output: http://queues.webkit.org/results/11120310
Alexis Menard (darktears)
Comment 8 2012-01-05 09:31:40 PST
Note You need to log in before you can comment on or make changes to this bug.