getComputedStyle for background is not implemented. https://bugs.webkit.org/show_bug.cgi?id=75539

Reviewed by Tony Chang.

Source/WebCore:

Implement getComputedStyle for background.

Test: fast/css/getComputedStyle/getComputedStyle-background-shorthand.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):

LayoutTests:

Add new tests to make sure we return the correct values.

* fast/css/getComputedStyle/getComputedStyle-background-shorthand-expected.txt: Added.
* fast/css/getComputedStyle/getComputedStyle-background-shorthand.html: Added.


Canonical link: https://commits.webkit.org/92415@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104169 268f45cc-cd09-0410-ab3c-d52691b4dbfc